@@ -1,1 +1,1 @@
-`C++` is hard. `C++` is fast.
+`C++` is a programming language. The name comes from the `++` operator, which increments the value of a variable by one.
